# Archi

./: .gitignore  LICENSE  README.md  pyproject.toml
.obsidian/: workspace.json
Archi/: generate_obsidian.py  graph.py  main.py  scanner.py
obsidian_vault/: INDEX.md  api_gateway.md  book.md  follow.md  frontend.md  proto.md  recommendation.md  social.md  user.md
obsidian_vault_fastapi_auth/: AuthServiceStub.md  AuthorProfile.md  BaseSettings.md  BookLike.md  BookProfile.md  BookRating.md  BookReview.md  BookSyncRequest.md  Enum.md  FollowServiceStub.md  GetBookEmbeddingRequest.md  GetFollowListResponse.md  GetFollowStatsResponse.md  GetSimilarBooksRequest.md  INDEX.md  IndexBookPayload.md  IndexBooksRequest.md  InteractionEventBody.md  LoginRequest.md  ProfileUpdate.md  QdrantClient.md  RagServiceStub.md  RatingUpsertRequest.md  RecommendationRequestBody.md  RecommendationServiceStub.md  RefreshToken.md  RefreshTokenRequest.md  RefreshTokenResponse.md  RetrievalCandidate.md  ReviewCreateRequest.md  ReviewLike.md  ReviewReplyCreateRequest.md  ReviewUpdateRequest.md  SQLModel.md  SemanticSearchRequest.md  SeriesProfile.md  Settings.md  Shelf.md  ShelfCreateRequest.md  ShelfItem.md  (+776 more)
obsidian_vault_g2/: APIView.md  AbstractBaseUser.md  AppConfig.md  AsyncWebsocketConsumer.md  BaseAuthentication.md  BaseCommand.md  BaseMiddleware.md  BaseUserManager.md  INDEX.md  Model.md  PermissionsMixin.md  book.md  book_jsons.md  book_old.md  book_old_old-book.md  book_old_old_markdown.md  book_old_old_markdown_old-images.md  book_old_screens.md  frontend.md  galileo.md  (+416 more)
(+28 files in other folders)
